--- a/course2.html
+++ b/course2.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <title>코스2</title>
-<link rel="stylesheet" href="../css/course.css" />
-<link rel="stylesheet" href="../css/cssResetcss" />
+<link rel="stylesheet" href="./css/course.css" />
+<link rel="stylesheet" href="./css/cssResetcss" />
 </head>
 
 <body>
