--- a/course1.html
+++ b/course1.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width" />
 <title>코스1</title>
 <link rel="stylesheet" href="./course.css" />
-<link rel="stylesheet" href="./cssResetcss" />
+<link rel="stylesheet" href="./cssReset.css" />
 </head>
 
 <body>
