--- a/course2.html
+++ b/course2.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <title>코스2</title>
-<link rel="stylesheet" href="./css/course.css" />
+<link rel="stylesheet" href="https://geonhui9.github.io/travel_jong-ha/course.css" />
 <link rel="stylesheet" href="./css/cssResetcss" />
 </head>
 
