--- a/course1.html
+++ b/course1.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <title>코스1</title>
-<link rel="stylesheet" href="https://geonhui9.github.io/travel_jong-ha/course.css" />
+<link rel="stylesheet" href="./course.css" />
 <link rel="stylesheet" href="./cssReset.css" />
 </head>
 
