--- a/course3.html
+++ b/course3.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <title>코스1</title>
-<link rel="stylesheet" href="./css/course.css" />
-<link rel="stylesheet" href="./css/cssResetcss" />
+<link rel="stylesheet" href="./course.css" />
+<link rel="stylesheet" href="./cssReset.css" />
 </head>
 
 <body>
@@ -61,7 +61,7 @@
        <p class="time">오전9시반</p>
        <p>체크아웃</p>
        <p class="time">오전10시</p>
-       <p>강릉의 명물 초당순두부 먹기<a href="../초당순두부.PNG"> 위치</a></br />
+       <p>강릉의 명물 초당순두부 먹기<a href="./초당순두부.PNG"> 위치</a></br />
           위쪽 파란점의 전남광주 순두부집 맛있었고. 아래쪽은 초당순두부마을이니 참고.</p>
        <p class="time">오전11시 반</p>
        <p>평창 목장 입장(양떼목장, 삼양목장, 하늘목장 세군데가 있음)<br />
@@ -69,7 +69,7 @@
           하늘목장은 트랙터를 타고 정상까지 올라갈 수 있음. 양 먹이주기 체험도 있음. 블로그참고.</p> 
        <p class="time">오후 2시</p>
        <p>근처에서 식사(한우,메밀막국수,감자옹심이칼국수 등이 유명함)<a href="https://c11.kr/2qk9">추천 검색어 : 대관령 맛집</a><br />
-          조금 내려가면 봉평의 메밀국수,메밀전병도 유명하지만 동선이 조금 왔다 갔다 해야함.<a href="../메밀.PNG">참고</a></p>
+          조금 내려가면 봉평의 메밀국수,메밀전병도 유명하지만 동선이 조금 왔다 갔다 해야함.<a href="./메밀.PNG">참고</a></p>
        <p class="time">오후 3시 반</p>
        <p>월정사 전나무숲 도착. 입구에 주차해놓고 들어가서 좀 걸으면 전나무 숲이 나옴.</br>
           모르는 건 안내에게 묻기. 전나무가 울창해서 산림욕하기 좋음. 사진도 잘나옴! <a href="http://naver.me/5AJtkgmz">포스팅</a></p>
