--- a/home.html
+++ b/home.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <title>신나는 강원도 여행</title>
-<link rel="stylesheet" href="./css/home.css" />
-<link rel="stylesheet" href="./css/cssReset.css" />
+<link rel="stylesheet" href="./home.css" />
+<link rel="stylesheet" href="./cssReset.css" />
 </head>
 
 <body>
