--- a/course1.html
+++ b/course1.html
@@ -19,10 +19,10 @@
   
     <div id="firstday">
        <h2>첫째 날</h2>
-       <p class="time">오후 5시 출발</p>
-       <span>전주 출발.<a href="https://c11.kr/2kg8" target="_blank">(경로보기)</a></span>
+       <p class="time">오후 5시 전주 출발</p>
+       <span>전주 출발.<a href="https://c11.kr/2kg8" target="_blank"><u>(경로보기)</u></a></span>
        <p><저녁식사는 전주에서or휴게소or차 속 간식</p>
-       <p class="time">오후 10시 반 도착</p>
+       <p class="time">오후 10시 반 삼척 도착</p>
        <p>휴게소 등 고려해서 조금 넉넉히 잡음<br />
           숙소 체크인, 휴식</p>
     </div>
@@ -31,29 +31,25 @@
     <div id="seconday">
        <h2>둘째 날</h2>
        <p class="time">오전9시 장호항</p>
-       <p><a href="https://c11.kr/2o5i" target="_blank">삼척 장호어촌마을</a>에서 스노쿨링,<br />
+       <p><a href="https://c11.kr/2o5i" target="_blank"><u>삼척 장호어촌마을</u></a>에서 스노쿨링,<br />
           투명카누 체험하며 물놀이~<br />(9시 반 이전에 가면 50% 할인)</p>
        <p class="time">오전 11시반 점심식사</p>
-       <p>장호항 주변 수산센터,횟집 등에서 해물 <br />or "장호 막국수"(막국수,수육,감자탕)등<br />
-          비해물도 있음.  <a href="https://c11.kr/2qxw" target="_blank"> 참고</a> </p>
+       <p>장호항 주변 수산센터,횟집 등에서 해물 or<br /> "장호 막국수"(막국수,수육,감자탕)등
+          비해물도 있음. <br /> <a href="https://c11.kr/2qxw" target="_blank"><u>참고</u></a> </p>
        <p class="time">오후1시 해안 드라이브</p>
        <p><b>장호항~안목해변</b>코스의 해안도로 드라이브 <br />중간에 헌화로에서 멈춰 경치보며 바람쐬면 좋음.<br />
-          <a href="https://c11.kr/2onx" target="_blank">헌화로</a>가 가장 유명한 해안도로이며 금진항~심곡항까지가 하이라이트.<br />
-          금진항,심곡항의 포장마차 등도 별미임.</p> <a href="http://dmaps.kr/apc2d" target="_blank">알고리즘은 안알려주는 멋진 해안지방도4개를 경유한 특별코스</a>
-       <p class="time">오후3시 반 강릉 커피거리</p>
+          <a href="https://c11.kr/2onx" target="_blank"><u>헌화로</u></a>가 가장 유명한 해안도로이며 금진항~심곡항까지가 하이라이트.<br />
+          금진항,심곡항의 포장마차 등도 별미임.</p> <a href="http://dmaps.kr/apc2d" target="_blank"><u>알고리즘은 안알려주는 멋진 해안지방도4개를 경유한 특별코스</u></a>
+       <p class="time">오후3시 40분 강릉 커피거리</p>
        <p>안목해변 강릉 커피거리! 당과 카페인 섭취</p>
-       <p class="time">오후4시 반 바베큐거리 쇼핑</p>
-       <p>저녁식사 바베큐거리 쇼핑~ 주변마트, 강릉중앙시장에서 고기랑 채소사고~<br />
-          <a href="http://dmaps.kr/apd2k" target="_blank">주문진수산시장</a>에 가서 구경도 하고 해산물 사기<br />
-          저녁식사가 좀 늦으니 배고프면 강릉중앙시장,주문진수산시장 등에서 간식 사먹는 것 추천</p>
-       <p class="time">오후6시 30분 숙소 체크인</p>
-       <p>숙소에 들어와서 바베큐거리를 냉장고에 넣어둠.<br />
-          잠시 차에 놔도 괜찮을 것 같으면 스킵해도 됨</p>
-       <p class="time">오후6시 50분 경포호 2인 자전거</p>
+       <p class="time">오후 4시 50분 바베큐거리 쇼핑</p>
+       <p>강릉중앙시장에들러서 저녁 바베큐거리 사기(시장이 부족하면 마트도 이용)<br />
+       <i>*저녁식사가 좀 늦으니 <a href="https://c11.kr/2r48"><u>강릉중앙시장</u></a>에서 간식도 사먹기*</i></p>
+       <p class="time">오후6시 30분 경포호 2인 자전거</p>
        <p>2인용 자전거or전동차타며 강릉의 자랑 경포호 한바퀴 돌기~ 해질녘이라 더 좋음.<br />
           중간에 허균 허난설현 기념관도 있으니 참고.</p>
-       <p class="time">오후 8시</p>
-       <p>숙소 들어와서, 짐풀고 바베큐파티~~~</p>
+       <p class="time">오후 8시 바베큐</p>
+       <p>숙소 들어와서, 짐풀고 바베큐파티~~~시작</p>
        <p class="time">오후9시 반</p>
        <p>바베큐 다 해먹고 휴식..</p>
        <p class="time">밤..</p>
@@ -69,20 +65,20 @@
        <h2>셋째 날</h2>
        <p class="time">오전9시반 체크아웃</p>
        <p class="time">오전10시 아점</p>
-       <p>강릉의 명물 초당순두부 먹기<a href="./초당순두부.PNG" target="_blank"> 위치</a></br />
+       <p>강릉의 명물 초당순두부 먹기<a href="./초당순두부.PNG" target="_blank"><u>위치</u></a></br />
           위쪽 파란점의 전남광주 순두부집 맛있었고. 아래쪽은 초당순두부마을이니 참고.</p>
        <p class="time">오전11시 반 목장</p>
        <p>평창 목장 입장(양떼목장, 삼양목장, 하늘목장 세군데가 있음)<br />
-          하늘목장 추천. <a href="https://c11.kr/2qhn" target="_blank">가격, 트랙터시간표 등 유용한 정보 있으니 블로그 참고.</a><br />
+          하늘목장 추천. <a href="https://c11.kr/2qhn" target="_blank"><u>가격, 트랙터시간표 등 유용한 정보 있으니 블로그 참고.</u></a><br />
           하늘목장은 트랙터를 타고 정상까지 올라갈 수 있음. 양 먹이주기 체험도 있음. 블로그참고.</p> 
        <p class="time">오후 2시 늦은 점심</p>
-       <p>근처에서 식사(한우,메밀막국수,감자옹심이칼국수 등이 유명함)<a href="https://c11.kr/2qk9" target="_blank">추천 검색어 : 대관령 맛집</a><br />
-          조금 내려가면 봉평의 메밀국수,메밀전병도 유명하지만 동선이 조금 왔다 갔다 해야함.<a href="./메밀.PNG" target="_blank">참고</a></p>
+       <p>근처에서 식사(한우,메밀막국수,감자옹심이칼국수 등이 유명함)<a href="https://c11.kr/2qk9" target="_blank"><u>추천 검색어 : 대관령 맛집</u></a><br />
+          조금 내려가면 봉평의 메밀국수,메밀전병도 유명하지만 동선이 조금 왔다 갔다 해야함.<a href="./메밀.PNG" target="_blank"><u>참고</u></a></p>
        <p class="time">오후 3시 반 월정사 전나무숲</p>
        <p>월정사 전나무숲 도착. 입구에 주차해놓고 들어가서 좀 걸으면 전나무 숲이 나옴.</br>
-          모르는 건 안내에게 묻기. 전나무가 울창해서 산림욕하기 좋음. 사진도 잘나옴! <a href="http://naver.me/5AJtkgmz" target="_blank">포스팅</a></p>
+          모르는 건 안내에게 묻기. 전나무가 울창해서 산림욕하기 좋음. 사진도 잘나옴! <a href="http://naver.me/5AJtkgmz" target="_blank"><u>포스팅</u></a></p>
        <p class="time">오후 5시 출발</p>
-       <p>전주로 출발. <a href="http://dmaps.kr/apspr" target="_blank">경로</a></p>
+       <p>전주로 출발. <a href="http://dmaps.kr/apspr" target="_blank"><u>경로</u></a></p>
        <p class="time">약 오후 9시~ 도착</p>   
        <p>전주 도착</p>
      </div>
@@ -104,9 +100,9 @@
             <tr align="center" bgcolor="aqua"> <td colspan="5"> *본 일정에 따른 것이며 일정 변경에 따라 달라질 수 있음. 특히 숙박 부분 등은 대략적임을 알림.</td>
      </table>
      <div id="caution">
-       <p><u>여행지 정보 섹션과 검색 등을 참고해서 일정을 여행자의 기호에 맞게 편집하는 것도 좋음. ex)식사, 관광지 등등<br />
+       <p><i>여행지 정보 섹션과 검색 등을 참고해서 일정을 여행자의 기호에 맞게 편집하는 것도 좋음. ex)식사, 관광지 등등<br />
           각 일정별 상황과 여행자의 기호에 따라 시간은 계획과 달라질 수 있음<br />
-          시간이 달라져도 융통성있게 일정을 참고하며 움직이기 바람!</u><p>
+          시간이 달라져도 융통성있게 일정을 참고하며 움직이기 바람!</i><p>
       </div> 
    
  </footer>
