--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -18,32 +18,82 @@
        <li class="list"><a href="./course1.html">코스1</a></li>
        <li class="list"><a href="./course2.html">코스2</a></li>
        <li class="list"><a href="./course3.html">코스3</a></li>
+       <li class="list"><a href="./course4.html">코스4</a></li>
        <li class="list"><a href="./travel spot.html">여행지정보</a></li>
    </ul>
  </header>
 
  <div id="content">  
-    <section class="section">
-      <h1>코스1</h1>
-      <p>      </p>
-    </section>
+   
+   <div id="consection">
+    <h2>코스별 차이</h2>
+    <p>네가지 코스 모두 둘째날만 차이가 있습니다.
+       <ul>
+           <li>*점심을 삼척에서 먹을지, 헌화로에서 먹을지</li>
+           <li>*저녁에 바베큐를 해먹을지 말지.</li>
+           <li>*주문진수산시장을 갈지 말지</li>
+       </ul><br /><br /><br />
+        코스4=>코스1>코스3>코스2 순으로 일정이 빡빡함 코스2가 가장 안빡빡한 코스임.</p>
+   </div>
 
 
-    <section class="section">
+    <div id="course1" class="section">
+      <h2>코스1</h2>
+      <table align="center" border="1" bordercolor="deepskyblue" cellpadding="3">
+      <tr bgcolor="antiquewhite"><td>점심</td><td>바베큐</td><td>주문진수산시장</td></tr>
+      <tr><td>삼척</td><td>o</td><td>x</td></tr></table>
+      <p>삼척에서 해양레포츠를 끝내고 바로 밥을 먹기에 점심을 기다릴 필요가 없음.<br />
+         바베큐를 해먹기때문에 사먹는거에 비해 시간과 노력은 많이 듬.<br />
+         주문진을 가기엔 시간이 빠듯함.</br>
+         저녁식사가 좀 늦으며 일정이 빡빡한 편임</p>
+      
+      
+     </div>
+
+
+    <div id="course2" class="section">
       <h2>코스2</h2>
-      <p>      </p>
-    </section>
+      <table align="center" border="1" bordercolor="deepskyblue" cellpadding="3">
+      <tr bgcolor="antiquewhite"><td>점심</td><td>바베큐</td><td>주문진수산시장</td></tr>
+      <tr><td>삼척</td><td>x</td><td>x</td></tr></table>
+      <p>삼척에서 해양레포츠를 끝내고 바로 밥을 먹기에 점심을 기다릴 필요가 없음.<br />
+         바베큐를 해먹지 않기에 시간과 노력을 아낄 수 있음. 바베큐대신 저녁을 사먹어야함.<br />
+         중앙시장or강릉교동짬뽕본점 등을 추천함.
+         가장 덜 빡빡한 일정임</p>
+    </div>
 
 
-    <section class="section">
+    <div id="course3" class="section">
       <h2>코스3</h2>
-      <p>      </p>
-    </section>
+      <table align="center" border="1" bordercolor="deepskyblue" cellpadding="3">
+      <tr bgcolor="antiquewhite"><td>점심</td><td>바베큐</td><td>주문진수산시장</td></tr>
+      <tr><td>헌화로</td><td>x</td><td>o</td></tr></table>
+      <p>해양레포츠를 끝낸 후 삼척에서의 점심대신 바로 해안드라이브 길에 올라탐.<br />
+         강릉 헌화로에 다다랐을때 금진항or심곡항에서 좋은 뷰를 보며 밥을 먹음
+         금진항의 항구마차가 유명함.<br /> 삼척에서의 식사에 비해 좀 더 헌화로를 즐길 수 있고 여유가 있음. 대신 오후 1시정도까지 식사를 참아야함.<br />
+         바베큐를 해먹지 않기에 시간과 노력을 아낄 수 있음.<br />
+         삼척에서 점심먹는거에 비해 시간이 좀더 여유가 있어 주문진수산시장에서 해산물을 먹는 코스임.<br />
+         코스1,2 에서는 삼척 장호항에서 해산물을 먹을 수도 있긴함.<br />
+         중간정도로 빡빡한 일정임</p>
+    </div>
+
+    <div id="course4" class="section">
+      <h2>코스4</h2>
+      <table align="center" border="1" bordercolor="deepskyblue" cellpadding="3">
+      <tr bgcolor="antiquewhite"><td>점심</td><td>바베큐</td><td>주문진수산시장</td></tr>
+      <tr><td>헌화로</td><td>o</td><td>o</td></tr></table>
+      <p>해양레포츠를 끝낸 후 삼척에서의 점심대신 바로 해안드라이브 길에 올라탐.<br /> 
+         강릉 헌화로에 다다랐을때 금진항or심곡항에서 좋은 뷰를 보며 밥을 먹음
+         금진항의 항구마차가 유명함.<br /> 원래 포함된 코스에서 밥을 먹기에 좀 더 헌화로를 즐길 수 있고 여유있음. 대신 오후 1시정도까지 식사를 참아야함.<br />
+         강릉중앙시장과 주문진수산시장을 구경하며 즐기며 그곳에서 바베큐재료를 사와서 바베큐를 해먹는 코스임.
+         <br />코스1,2에 비해 조금 번 시간으로 가장 많은 걸 함.일정이 빡빡한 편임</p>
+    </div>
+
  </div>
 
  <footer>
-   <p>참고 : '대한민국 구석구석' '네이버 블로그' '다음 지도'</p>
-   <p>문의:010-2913-8892</p>
+   <p id="ref">참고한 사이트 : '대한민국 구석구석'  '네이버 블로그'  '다음 지도'</p>
+   <p id="hp">문의:010-2913-8892</p>
 </body>
 
 </html>
