--- a/home.html
+++ b/home.html
@@ -36,7 +36,8 @@
         코스4=>코스1>코스3>코스2 순으로 일정이 빡빡함 코스2가 가장 안빡빡한 코스임.</p>
    </div>
 
-
+    <div id="bgimg">
+ 
     <div id="course1" class="section">
       <h2>코스1</h2>
       <table align="center" border="1" bordercolor="deepskyblue" cellpadding="3">
@@ -89,6 +90,7 @@
          <br />코스1,2에 비해 조금 번 시간으로 가장 많은 걸 함.일정이 빡빡한 편임</p>
     </div>
 
+ </div>
  </div>
 
  <footer>
